# SDK-C

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.zh  README.md  README.zh.md
.github/workflows/: build.yml  build_and_test.yml  generate_docs.yml  test.yml
examples/: CMakeLists.txt
examples/log_messages/: main.c
examples/run_client/: main.c
i18n/: zh.json
include/: agent.h  array.h  block.h  block_source.h  client.h  config.h  dictionary.h  disable_stdio.h  entity.h  entity_source.h  exception.h  exceptions.h  inventory.h  item_stack.h  list.h  logger.h  message.h  optional.h  optional_value.h  orientation.h  position.h  queue.h  sdk.h  stack.h  types.h
include/internal/: agent.h  block.h  block_source.h  client.h  config.h  entity.h  entity_source.h  inventory.h  item_stack.h  logger.h  message.h  msvc_wshelper.h  section.h
include/user_only/: stdio.h
samples/handle_exceptions/: main.c
scripts/: i18n_dict_apply.py  i18n_dict_gen.py
src/: CMakeLists.txt  agent.c  array.c  block.c  block_source.c  client.c  dictionary.c  entity.c  entity_source.c  exception.c  exceptions.c  inventory.c  item_stack.c  list.c  logger.c  message.c  msvc_wshelper.c  queue.c  sdk.c  section.c  stack.c
test/: CMakeLists.txt  array_test.cc  dictionary_test.cc  item_stack_test.cc  list_test.cc  logger_test.cc  queue_test.cc  section_test.cc  stack_test.cc  test.cc
tests/: CMakeLists.txt
